--- a/include/style.css
+++ b/include/style.css
@@ -54,7 +54,7 @@ label .hamburger:after, label .hamburger:before {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: #283618;
+  background: #fff;
 }
 
 label .hamburger:before { top: -10px; }
